2008-09-18  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/mod_roster_odbc.erl: Convert to exmpp.

2008-09-16  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Merge from trunk (r1457 to r1563).

2008-09-15  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Fix explanation of mod_muc's anonymous
	option. Make clear that an ejabberd_service can only serve a
	single external component. Provide Mnesia directory when setting
	clustering (thanks to Matthew Reilly)

2008-09-12  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_http.hrl: Provide Host, Port, Headers and
	Transfer Protocol in request (thanks to Eric Cestari)(EJAB-560)
	* src/web/ejabberd_http.erl: Likewise

2008-09-02  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Fix mod_proxy configuration example
	* doc/guide.html: Likewise

2008-09-02  Mickael Remond  <mremond@process-one.net>

	* src/odbc/mssql2000.sql: Script for MSSQL 2000
	* src/odbc/mssql2005.sql: Script for MSSQL 2005 (EJAB-535)
	* src/odbc/mssql.sql: removed

2008-08-27  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/mod_roster.erl: Remove a debugging io:format/2.

	* src/mod_caps.erl: handle_cast({disco_response, ...}, ...) now
	receives an #iq record: update the code to handle this.

	* src/mod_vcard.erl: VCards are now stored as #xmlel. Mnesia tables
	are converted during startup.

2008-08-27  Christophe Romain  <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: send last published events now
	supports PEP events from unavailable users nodes (EJAB-698)
	* src/ejabberd_c2s.erl: Likewise

2008-08-26  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/jlib.erl: short_jid/1 and short_bare_jid/1 now produce a short
	JID from the user-provided JID parts. To obtain a short JID from the
	STRINGPREP'd parts, use the new short_prepd_jid/1 and
	short_prepd_bare_jid/1 functions. Remove commented-out code and use
	proper variable names. Those functions use the atom 'undefined' and